cmake_minimum_required(VERSION 3.1)
project(MyFunList)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(include)

set(SOURCES
    src/main.cpp
    src/Item.cpp
    src/Book.cpp
    )

set(HEADER_FILES
    include/Item.hpp
    include/Book.hpp
    )

add_compile_options(-Wall -Wextra -Werror -Wpedantic)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADER_FILES})
